--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@octokit/rest": "^21.0.2",
+    "js-base64": "^3.7.7",
     "vue": "^3.5.3"
   },
   "devDependencies": {
