--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,10 +29,10 @@
     }
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "node_modules/chrome-types/*.d.ts",
-    "types/**/*.ts"
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+    "./src/**/*.vue",
+    "./node_modules/chrome-types",
+    "./types"
   ]
 }
