--- a/chrome-ext-manifest.json
+++ b/chrome-ext-manifest.json
@@ -12,7 +12,7 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "permissions": ["activeTab", "bookmarks"],
+  "permissions": ["activeTab", "bookmarks", "storage"],
   "background": {
     "service_worker": "background.js"
   }
