--- a/package.json
+++ b/package.json
@@ -13,15 +13,25 @@
   "dependencies": {
     "@octokit/rest": "^21.0.2",
     "js-base64": "^3.7.7",
+    "lodash-es": "^4.17.21",
+    "path-browserify": "^1.0.1",
+    "pinia": "^2.2.2",
+    "tdesign-icons-vue-next": "^0.2.6",
+    "tdesign-vue-next": "^1.10.0",
     "vue": "^3.5.3"
   },
   "devDependencies": {
+    "@types/path-browserify": "^1.0.3",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.2",
     "chrome-types": "^0.1.301",
     "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5",
+    "sass-embedded": "^1.78.0",
     "typescript": "^5.5.3",
+    "unplugin-auto-import": "^0.18.2",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.1",
     "vite-plugin-importmap": "^0.1.1",
     "vue-tsc": "^2.0.29"
