--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@octokit/rest": "^21.0.2",
+    "@vueuse/core": "^11.0.3",
+    "bem-ts": "^0.14.0",
     "js-base64": "^3.7.7",
     "lodash-es": "^4.17.21",
     "path-browserify": "^1.0.1",
@@ -21,9 +23,9 @@
     "vue": "^3.5.3"
   },
   "devDependencies": {
-    "@types/path-browserify": "^1.0.3",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.5.4",
+    "@types/path-browserify": "^1.0.3",
     "@vitejs/plugin-vue": "^5.1.2",
     "chrome-types": "^0.1.301",
     "cross-env": "^7.0.3",
