--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.1",
     "vite-plugin-importmap": "^0.1.1",
+    "vite-plugin-vue-devtools": "^7.4.5",
     "vue-tsc": "^2.0.29"
   }
 }
