--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^22.5.4",
     "@types/path-browserify": "^1.0.3",
     "@vitejs/plugin-vue": "^5.1.2",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
     "chrome-types": "^0.1.301",
     "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5",
