--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "build:net": "vue-tsc --noEmit && cross-env VITE_CONTEXT_TYPE=net vite build",
-    "start": "run-p \"dev\" \"build --watch\"",
-    "preview": "vite preview"
+    "build:watch": "cross-env VITE_DEV_URL=http://192.168.1.87:7494/ pnpm build --watch",
+    "dev:themes": "cd themes && pnpm dev",
+    "start": "run-p \"dev:themes\" \"build:watch\""
   },
   "dependencies": {
     "@octokit/rest": "^21.0.2",
@@ -24,6 +24,7 @@
     "vue": "^3.5.3"
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.5.4",
     "@types/path-browserify": "^1.0.3",
@@ -31,6 +32,7 @@
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "chrome-types": "^0.1.301",
     "cross-env": "^7.0.3",
+    "cross-spawn": "^7.0.3",
     "npm-run-all": "^4.1.5",
     "sass-embedded": "^1.78.0",
     "typescript": "^5.5.3",
