--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,8 +1,9 @@
 {
-  "name": "无限书签",
+  "name": "__MSG_extName__",
   "version": "0.0.0.1",
   "manifest_version": 3,
-  "description": "Manage your browser bookmarks more comfortably, and at the same time, turn them into your personal customized navigation site.",
+  "default_locale": "en",
+  "description": "__MSG_extDescription__",
   "icons": {
     "16": "icons/icon.png",
     "32": "icons/icon.png",
@@ -12,7 +13,11 @@
   "action": {
     // "default_popup": "popup.html"
   },
-  "permissions": ["activeTab", "bookmarks", "storage"],
+  "permissions": [
+    "activeTab",
+    "bookmarks",
+    "storage"
+  ],
   "background": {
     "service_worker": "background.js",
     "type": "module"
