--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "pinyin-pro": "^3.24.2",
     "tdesign-icons-vue-next": "^0.2.6",
     "tdesign-vue-next": "^1.10.0",
-    "vue": "^3.5.3"
+    "vue": "^3.5.3",
+    "wait": "^0.4.2",
+    "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
     "@types/cross-spawn": "^6.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.5.4",
     "@types/path-browserify": "^1.0.3",
+    "@types/webextension-polyfill": "^0.12.1",
     "@vitejs/plugin-vue": "^5.1.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "chrome-types": "^0.1.301",
